feat: complete Excel import/export translations for all languages
- Add comprehensive Excel import/export translations to 12 languages (AR, DE, ES, FA, FR, ID, IT, JA, KO, PT, RU, ZH)
- Include import validation, preview, processing, success/error messages
- Add duplicate detection and merge functionality translations
- Complete localization coverage for Excel features across all supported languages
- Update version to 0.5.2 to reflect translation completion

Closes Excel translation gaps reported in Korean, Persian, and Indonesian files
Ensures consistent user experience across all 13 supported languages

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -154,5 +154,32 @@
   "totalTransactions": "إجمالي المعاملات",
   "totalAmount": "إجمالي المبلغ",
   "lastTransaction": "آخر معاملة",
-  "createdDate": "تاريخ الإنشاء"
+  "createdDate": "تاريخ الإنشاء",
+  "importFromExcel": "استيراد من Excel",
+  "importData": "استيراد البيانات",
+  "selectExcelFile": "يرجى اختيار ملف Excel لاستيراد البيانات منه",
+  "importValidationFailed": "فشل في التحقق من صحة الاستيراد",
+  "importPreviewSummary": "سيضيف الاستيراد {{accounts}} حسابات مع {{transactions}} معاملات باستخدام {{currencies}} عملات",
+  "importPreviewAccounts": "الحسابات المراد استيرادها",
+  "andMoreAccounts": "و {{count}} حسابات أخرى",
+  "importPreviewDateRange": "نطاق تواريخ المعاملات",
+  "noTransactionsInRange": "لا توجد معاملات",
+  "importWarning": "⚠️ سيؤدي هذا إلى تعديل بياناتك الحالية",
+  "replaceData": "استبدال جميع البيانات",
+  "mergeData": "دمج مع الموجود",
+  "processingImport": "معالجة الاستيراد...",
+  "importSuccess": "نجح الاستيراد",
+  "importSuccessMessage": "تم استيراد {{accounts}} حسابات و {{transactions}} معاملات بنجاح",
+  "importMergeSuccess": "تم الاستيراد: أُضيف {{accounts}} حسابات و {{transactions}} معاملات. تم تخطي {{skippedAccounts}} حسابات مكررة و {{skippedTransactions}} معاملات مكررة.",
+  "duplicatesDetected": "تم اكتشاف مكررات",
+  "duplicateAccountsFound": "تم العثور على {{count}} حسابات مكررة",
+  "duplicateTransactionsFound": "تم العثور على {{count}} معاملات مكررة",
+  "importFailed": "فشل الاستيراد: {{error}}",
+  "importExecutionFailed": "فشل في معالجة بيانات الاستيراد",
+  "noAccountsToImport": "لم يتم العثور على حسابات صحيحة في ملف Excel",
+  "invalidAccountName": "الحساب {{index}} له اسم غير صحيح",
+  "invalidAccountCurrency": "الحساب {{index}} له عملة غير صحيحة",
+  "emptyTransactionName": "المعاملة {{index}} لها اسم فارغ",
+  "invalidTransactionAmount": "المعاملة {{index}} لها مبلغ غير صحيح",
+  "invalidTransactionType": "المعاملة {{index}} لها نوع غير صحيح"
 }
