--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -123,36 +123,63 @@
   "reset": "Zurücksetzen",
   "settingsSaveFailed": "Fehler beim Speichern der Einstellungen",
   "totalBalance": "Gesamtsaldo",
-  "exportToExcel": "Export to Excel",
-  "exportData": "Export Data",
-  "preparingExport": "Preparing export...",
-  "noData": "No Data",
-  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
-  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
-  "export": "Export",
-  "exportSuccess": "Data exported successfully!",
-  "exportFailed": "Export failed. Please try again.",
-  "exportPreparationFailed": "Failed to prepare export data.",
-  "exportMetadata": "Export Information",
-  "appName": "App Name",
-  "exportDate": "Export Date",
-  "exportDescription": "Export Description",
-  "exportContent": "Export Content",
-  "exportContentDescription": "This file contains all your account and transaction data",
-  "dataPrivacy": "Data Privacy",
-  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
-  "sheetStructure": "Sheet Structure",
-  "summarySheet": "Summary Sheet",
-  "summarySheetDescription": "Overview of all accounts and their statistics",
-  "accountSheets": "Account Sheets",
-  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
-  "metadata": "Metadata",
-  "summary": "Summary",
-  "accountInformation": "Account Information",
-  "runningBalance": "Running Balance",
-  "finalBalance": "Final Balance",
-  "totalTransactions": "Total Transactions",
-  "totalAmount": "Total Amount",
-  "lastTransaction": "Last Transaction",
-  "createdDate": "Created Date"
+  "exportToExcel": "Nach Excel exportieren",
+  "exportData": "Daten exportieren",
+  "preparingExport": "Export wird vorbereitet...",
+  "noData": "Keine Daten",
+  "noDataToExport": "Keine Daten zum Exportieren verfügbar. Bitte fügen Sie zuerst einige Konten und Transaktionen hinzu.",
+  "exportConfirmation": "{{accounts}} Konten mit {{transactions}} Transaktionen unter Verwendung der Währungen exportieren: {{currencies}}?",
+  "export": "Exportieren",
+  "exportSuccess": "Daten erfolgreich exportiert!",
+  "exportFailed": "Export fehlgeschlagen. Bitte versuchen Sie es erneut.",
+  "exportPreparationFailed": "Fehler bei der Vorbereitung der Exportdaten.",
+  "exportMetadata": "Export-Informationen",
+  "appName": "App-Name",
+  "exportDate": "Exportdatum",
+  "exportDescription": "Export-Beschreibung",
+  "exportContent": "Export-Inhalt",
+  "exportContentDescription": "Diese Datei enthält alle Ihre Konto- und Transaktionsdaten",
+  "dataPrivacy": "Datenschutz",
+  "dataPrivacyNote": "Alle Daten werden lokal exportiert. Nichts wird an externe Server gesendet.",
+  "sheetStructure": "Tabellenstruktur",
+  "summarySheet": "Übersichtsblatt",
+  "summarySheetDescription": "Überblick über alle Konten und ihre Statistiken",
+  "accountSheets": "Kontoblätter",
+  "accountSheetsDescription": "Einzelne Blätter für jedes Konto mit detaillierten Transaktionen",
+  "metadata": "Metadaten",
+  "summary": "Zusammenfassung",
+  "accountInformation": "Kontoinformationen",
+  "runningBalance": "Laufender Saldo",
+  "finalBalance": "Endsaldo",
+  "totalTransactions": "Gesamttransaktionen",
+  "totalAmount": "Gesamtbetrag",
+  "lastTransaction": "Letzte Transaktion",
+  "createdDate": "Erstellungsdatum",
+  "importFromExcel": "Aus Excel importieren",
+  "importData": "Daten importieren",
+  "selectExcelFile": "Bitte wählen Sie eine Excel-Datei zum Importieren von Daten aus",
+  "importValidationFailed": "Import-Validierung fehlgeschlagen",
+  "importPreviewSummary": "Der Import wird {{accounts}} Konten mit {{transactions}} Transaktionen unter Verwendung von {{currencies}} Währungen hinzufügen",
+  "importPreviewAccounts": "Zu importierende Konten",
+  "andMoreAccounts": "und {{count}} weitere Konten",
+  "importPreviewDateRange": "Transaktionsdatumsbereich",
+  "noTransactionsInRange": "Keine Transaktionen",
+  "importWarning": "⚠️ Dies wird Ihre vorhandenen Daten ändern",
+  "replaceData": "Alle Daten ersetzen",
+  "mergeData": "Mit vorhandenen zusammenführen",
+  "processingImport": "Import wird verarbeitet...",
+  "importSuccess": "Import erfolgreich",
+  "importSuccessMessage": "{{accounts}} Konten und {{transactions}} Transaktionen erfolgreich importiert",
+  "importMergeSuccess": "Import abgeschlossen: {{accounts}} Konten und {{transactions}} Transaktionen hinzugefügt. {{skippedAccounts}} doppelte Konten und {{skippedTransactions}} doppelte Transaktionen übersprungen.",
+  "duplicatesDetected": "Duplikate erkannt",
+  "duplicateAccountsFound": "{{count}} doppelte Konten gefunden",
+  "duplicateTransactionsFound": "{{count}} doppelte Transaktionen gefunden",
+  "importFailed": "Import fehlgeschlagen: {{error}}",
+  "importExecutionFailed": "Fehler bei der Verarbeitung der Importdaten",
+  "noAccountsToImport": "Keine gültigen Konten in der Excel-Datei gefunden",
+  "invalidAccountName": "Konto {{index}} hat einen ungültigen Namen",
+  "invalidAccountCurrency": "Konto {{index}} hat eine ungültige Währung",
+  "emptyTransactionName": "Transaktion {{index}} hat einen leeren Namen",
+  "invalidTransactionAmount": "Transaktion {{index}} hat einen ungültigen Betrag",
+  "invalidTransactionType": "Transaktion {{index}} hat einen ungültigen Typ"
 }
