--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -154,5 +154,32 @@
   "totalTransactions": "Total de Transacciones",
   "totalAmount": "Cantidad Total",
   "lastTransaction": "Última Transacción",
-  "createdDate": "Fecha de Creación"
+  "createdDate": "Fecha de Creación",
+  "importFromExcel": "Importar desde Excel",
+  "importData": "Importar Datos",
+  "selectExcelFile": "Por favor selecciona un archivo de Excel para importar datos desde",
+  "importValidationFailed": "Falló la Validación de Importación",
+  "importPreviewSummary": "La importación añadirá {{accounts}} cuentas con {{transactions}} transacciones usando {{currencies}} monedas",
+  "importPreviewAccounts": "Cuentas a importar",
+  "andMoreAccounts": "y {{count}} cuentas más",
+  "importPreviewDateRange": "Rango de fechas de transacciones",
+  "noTransactionsInRange": "Sin transacciones",
+  "importWarning": "⚠️ Esto modificará tus datos existentes",
+  "replaceData": "Reemplazar Todos los Datos",
+  "mergeData": "Combinar con Existentes",
+  "processingImport": "Procesando importación...",
+  "importSuccess": "Importación Exitosa",
+  "importSuccessMessage": "Se importaron exitosamente {{accounts}} cuentas y {{transactions}} transacciones",
+  "importMergeSuccess": "Importación completada: Se añadieron {{accounts}} cuentas y {{transactions}} transacciones. Se omitieron {{skippedAccounts}} cuentas duplicadas y {{skippedTransactions}} transacciones duplicadas.",
+  "duplicatesDetected": "Duplicados Detectados",
+  "duplicateAccountsFound": "Se encontraron {{count}} cuentas duplicadas",
+  "duplicateTransactionsFound": "Se encontraron {{count}} transacciones duplicadas",
+  "importFailed": "Falló la importación: {{error}}",
+  "importExecutionFailed": "Falló el procesamiento de datos de importación",
+  "noAccountsToImport": "No se encontraron cuentas válidas en el archivo de Excel",
+  "invalidAccountName": "La cuenta {{index}} tiene un nombre inválido",
+  "invalidAccountCurrency": "La cuenta {{index}} tiene una moneda inválida",
+  "emptyTransactionName": "La transacción {{index}} tiene un nombre vacío",
+  "invalidTransactionAmount": "La transacción {{index}} tiene una cantidad inválida",
+  "invalidTransactionType": "La transacción {{index}} tiene un tipo inválido"
 }
