--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -154,5 +154,32 @@
   "totalTransactions": "کل تراکنش‌ها",
   "totalAmount": "مقدار کل",
   "lastTransaction": "آخرین تراکنش",
-  "createdDate": "تاریخ ایجاد"
+  "createdDate": "تاریخ ایجاد",
+  "importFromExcel": "وارد کردن از اکسل",
+  "importData": "وارد کردن داده‌ها",
+  "selectExcelFile": "لطفاً فایل اکسل را برای وارد کردن داده‌ها انتخاب کنید",
+  "importValidationFailed": "اعتبارسنجی واردات ناموفق بود",
+  "importPreviewSummary": "واردات {{accounts}} حساب با {{transactions}} تراکنش با استفاده از {{currencies}} ارز اضافه خواهد کرد",
+  "importPreviewAccounts": "حساب‌های مورد واردات",
+  "andMoreAccounts": "و {{count}} حساب دیگر",
+  "importPreviewDateRange": "محدوده تاریخ تراکنش‌ها",
+  "noTransactionsInRange": "تراکنشی وجود ندارد",
+  "importWarning": "⚠️ این کار داده‌های موجود شما را تغییر خواهد داد",
+  "replaceData": "جایگزینی همه داده‌ها",
+  "mergeData": "ادغام با موجود",
+  "processingImport": "در حال پردازش واردات...",
+  "importSuccess": "واردات موفق",
+  "importSuccessMessage": "{{accounts}} حساب و {{transactions}} تراکنش با موفقیت وارد شدند",
+  "importMergeSuccess": "واردات تکمیل شد: {{accounts}} حساب و {{transactions}} تراکنش اضافه شد. {{skippedAccounts}} حساب تکراری و {{skippedTransactions}} تراکنش تکراری نادیده گرفته شد.",
+  "duplicatesDetected": "موارد تکراری شناسایی شد",
+  "duplicateAccountsFound": "{{count}} حساب تکراری یافت شد",
+  "duplicateTransactionsFound": "{{count}} تراکنش تکراری یافت شد",
+  "importFailed": "واردات ناموفق: {{error}}",
+  "importExecutionFailed": "پردازش داده‌های واردات ناموفق بود",
+  "noAccountsToImport": "هیچ حساب معتبری در فایل اکسل یافت نشد",
+  "invalidAccountName": "حساب {{index}} نام نامعتبری دارد",
+  "invalidAccountCurrency": "حساب {{index}} ارز نامعتبری دارد",
+  "emptyTransactionName": "تراکنش {{index}} نام خالی دارد",
+  "invalidTransactionAmount": "تراکنش {{index}} مقدار نامعتبری دارد",
+  "invalidTransactionType": "تراکنش {{index}} نوع نامعتبری دارد"
 }
