--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -154,5 +154,32 @@
   "totalTransactions": "Total des Transactions",
   "totalAmount": "Montant Total",
   "lastTransaction": "Dernière Transaction",
-  "createdDate": "Date de Création"
+  "createdDate": "Date de Création",
+  "importFromExcel": "Importer depuis Excel",
+  "importData": "Importer les Données",
+  "selectExcelFile": "Veuillez sélectionner un fichier Excel pour importer les données",
+  "importValidationFailed": "Échec de la Validation de l'Importation",
+  "importPreviewSummary": "L'importation ajoutera {{accounts}} comptes avec {{transactions}} transactions utilisant {{currencies}} devises",
+  "importPreviewAccounts": "Comptes à importer",
+  "andMoreAccounts": "et {{count}} comptes supplémentaires",
+  "importPreviewDateRange": "Plage de dates des transactions",
+  "noTransactionsInRange": "Aucune transaction",
+  "importWarning": "⚠️ Ceci modifiera vos données existantes",
+  "replaceData": "Remplacer Toutes les Données",
+  "mergeData": "Fusionner avec l'Existant",
+  "processingImport": "Traitement de l'importation...",
+  "importSuccess": "Importation Réussie",
+  "importSuccessMessage": "{{accounts}} comptes et {{transactions}} transactions importés avec succès",
+  "importMergeSuccess": "Importation terminée : {{accounts}} comptes et {{transactions}} transactions ajoutés. {{skippedAccounts}} comptes en double et {{skippedTransactions}} transactions en double ignorés.",
+  "duplicatesDetected": "Doublons Détectés",
+  "duplicateAccountsFound": "{{count}} comptes en double trouvés",
+  "duplicateTransactionsFound": "{{count}} transactions en double trouvées",
+  "importFailed": "Échec de l'importation : {{error}}",
+  "importExecutionFailed": "Échec du traitement des données d'importation",
+  "noAccountsToImport": "Aucun compte valide trouvé dans le fichier Excel",
+  "invalidAccountName": "Le compte {{index}} a un nom invalide",
+  "invalidAccountCurrency": "Le compte {{index}} a une devise invalide",
+  "emptyTransactionName": "La transaction {{index}} a un nom vide",
+  "invalidTransactionAmount": "La transaction {{index}} a un montant invalide",
+  "invalidTransactionType": "La transaction {{index}} a un type invalide"
 }
