--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -123,36 +123,63 @@
   "reset": "Reset",
   "settingsSaveFailed": "Gagal menyimpan pengaturan",
   "totalBalance": "Saldo total",
-  "exportToExcel": "Export to Excel",
-  "exportData": "Export Data",
-  "preparingExport": "Preparing export...",
-  "noData": "No Data",
-  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
-  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
-  "export": "Export",
-  "exportSuccess": "Data exported successfully!",
-  "exportFailed": "Export failed. Please try again.",
-  "exportPreparationFailed": "Failed to prepare export data.",
-  "exportMetadata": "Export Information",
-  "appName": "App Name",
-  "exportDate": "Export Date",
-  "exportDescription": "Export Description",
-  "exportContent": "Export Content",
-  "exportContentDescription": "This file contains all your account and transaction data",
-  "dataPrivacy": "Data Privacy",
-  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
-  "sheetStructure": "Sheet Structure",
-  "summarySheet": "Summary Sheet",
-  "summarySheetDescription": "Overview of all accounts and their statistics",
-  "accountSheets": "Account Sheets",
-  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
+  "exportToExcel": "Ekspor ke Excel",
+  "exportData": "Ekspor Data",
+  "preparingExport": "Mempersiapkan ekspor...",
+  "noData": "Tidak Ada Data",
+  "noDataToExport": "Tidak ada data untuk diekspor. Silakan tambahkan beberapa akun dan transaksi terlebih dahulu.",
+  "exportConfirmation": "Ekspor {{accounts}} akun dengan {{transactions}} transaksi menggunakan mata uang: {{currencies}}?",
+  "export": "Ekspor",
+  "exportSuccess": "Data berhasil diekspor!",
+  "exportFailed": "Ekspor gagal. Silakan coba lagi.",
+  "exportPreparationFailed": "Gagal mempersiapkan data ekspor.",
+  "exportMetadata": "Informasi Ekspor",
+  "appName": "Nama Aplikasi",
+  "exportDate": "Tanggal Ekspor",
+  "exportDescription": "Deskripsi Ekspor",
+  "exportContent": "Konten Ekspor",
+  "exportContentDescription": "File ini berisi semua data akun dan transaksi Anda",
+  "dataPrivacy": "Privasi Data",
+  "dataPrivacyNote": "Semua data diekspor secara lokal. Tidak ada yang dikirim ke server eksternal.",
+  "sheetStructure": "Struktur Sheet",
+  "summarySheet": "Sheet Ringkasan",
+  "summarySheetDescription": "Tinjauan semua akun dan statistiknya",
+  "accountSheets": "Sheet Akun",
+  "accountSheetsDescription": "Sheet individual untuk setiap akun dengan transaksi yang detail",
   "metadata": "Metadata",
-  "summary": "Summary",
-  "accountInformation": "Account Information",
-  "runningBalance": "Running Balance",
-  "finalBalance": "Final Balance",
-  "totalTransactions": "Total Transactions",
-  "totalAmount": "Total Amount",
-  "lastTransaction": "Last Transaction",
-  "createdDate": "Created Date"
+  "summary": "Ringkasan",
+  "accountInformation": "Informasi Akun",
+  "runningBalance": "Saldo Berjalan",
+  "finalBalance": "Saldo Akhir",
+  "totalTransactions": "Total Transaksi",
+  "totalAmount": "Total Jumlah",
+  "lastTransaction": "Transaksi Terakhir",
+  "createdDate": "Tanggal Dibuat",
+  "importFromExcel": "Impor dari Excel",
+  "importData": "Impor Data",
+  "selectExcelFile": "Silakan pilih file Excel untuk mengimpor data",
+  "importValidationFailed": "Validasi Impor Gagal",
+  "importPreviewSummary": "Impor akan menambahkan {{accounts}} akun dengan {{transactions}} transaksi menggunakan {{currencies}} mata uang",
+  "importPreviewAccounts": "Akun yang akan diimpor",
+  "andMoreAccounts": "dan {{count}} akun lainnya",
+  "importPreviewDateRange": "Rentang tanggal transaksi",
+  "noTransactionsInRange": "Tidak ada transaksi",
+  "importWarning": "⚠️ Ini akan mengubah data yang sudah ada",
+  "replaceData": "Ganti Semua Data",
+  "mergeData": "Gabung dengan yang Ada",
+  "processingImport": "Memproses impor...",
+  "importSuccess": "Impor Berhasil",
+  "importSuccessMessage": "Berhasil mengimpor {{accounts}} akun dan {{transactions}} transaksi",
+  "importMergeSuccess": "Impor selesai: Menambahkan {{accounts}} akun dan {{transactions}} transaksi. Melewati {{skippedAccounts}} akun duplikat dan {{skippedTransactions}} transaksi duplikat.",
+  "duplicatesDetected": "Duplikat Terdeteksi",
+  "duplicateAccountsFound": "{{count}} akun duplikat ditemukan",
+  "duplicateTransactionsFound": "{{count}} transaksi duplikat ditemukan",
+  "importFailed": "Impor gagal: {{error}}",
+  "importExecutionFailed": "Gagal memproses data impor",
+  "noAccountsToImport": "Tidak ada akun valid yang ditemukan dalam file Excel",
+  "invalidAccountName": "Akun {{index}} memiliki nama yang tidak valid",
+  "invalidAccountCurrency": "Akun {{index}} memiliki mata uang yang tidak valid",
+  "emptyTransactionName": "Transaksi {{index}} memiliki nama kosong",
+  "invalidTransactionAmount": "Transaksi {{index}} memiliki jumlah yang tidak valid",
+  "invalidTransactionType": "Transaksi {{index}} memiliki tipe yang tidak valid"
 }
