--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -123,36 +123,63 @@
   "privacyDescription": "I tuoi dati rimangono sul tuo dispositivo",
   "footerDescription": "LedgerWell ti aiuta a tracciare debiti e crediti con supporto multi-valuta e privacy completa.",
   "copyrightText": "© 2025 Sepehr Mohammady. Open source sotto licenza MIT.",
-  "exportToExcel": "Export to Excel",
-  "exportData": "Export Data",
-  "preparingExport": "Preparing export...",
-  "noData": "No Data",
-  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
-  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
-  "export": "Export",
-  "exportSuccess": "Data exported successfully!",
-  "exportFailed": "Export failed. Please try again.",
-  "exportPreparationFailed": "Failed to prepare export data.",
-  "exportMetadata": "Export Information",
-  "appName": "App Name",
-  "exportDate": "Export Date",
-  "exportDescription": "Export Description",
-  "exportContent": "Export Content",
-  "exportContentDescription": "This file contains all your account and transaction data",
-  "dataPrivacy": "Data Privacy",
-  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
-  "sheetStructure": "Sheet Structure",
-  "summarySheet": "Summary Sheet",
-  "summarySheetDescription": "Overview of all accounts and their statistics",
-  "accountSheets": "Account Sheets",
-  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
-  "metadata": "Metadata",
-  "summary": "Summary",
-  "accountInformation": "Account Information",
-  "runningBalance": "Running Balance",
-  "finalBalance": "Final Balance",
-  "totalTransactions": "Total Transactions",
-  "totalAmount": "Total Amount",
-  "lastTransaction": "Last Transaction",
-  "createdDate": "Created Date"
+  "exportToExcel": "Esporta in Excel",
+  "exportData": "Esporta Dati",
+  "preparingExport": "Preparazione esportazione...",
+  "noData": "Nessun Dato",
+  "noDataToExport": "Nessun dato disponibile per l'esportazione. Per favore aggiungi prima alcuni conti e transazioni.",
+  "exportConfirmation": "Esportare {{accounts}} conti con {{transactions}} transazioni usando le valute: {{currencies}}?",
+  "export": "Esporta",
+  "exportSuccess": "Dati esportati con successo!",
+  "exportFailed": "Esportazione fallita. Per favore riprova.",
+  "exportPreparationFailed": "Fallita la preparazione dei dati di esportazione.",
+  "exportMetadata": "Informazioni di Esportazione",
+  "appName": "Nome App",
+  "exportDate": "Data di Esportazione",
+  "exportDescription": "Descrizione Esportazione",
+  "exportContent": "Contenuto Esportazione",
+  "exportContentDescription": "Questo file contiene tutti i dati dei tuoi conti e transazioni",
+  "dataPrivacy": "Privacy dei Dati",
+  "dataPrivacyNote": "Tutti i dati vengono esportati localmente. Niente viene inviato a server esterni.",
+  "sheetStructure": "Struttura Fogli",
+  "summarySheet": "Foglio Riassunto",
+  "summarySheetDescription": "Panoramica di tutti i conti e le loro statistiche",
+  "accountSheets": "Fogli Conti",
+  "accountSheetsDescription": "Fogli individuali per ogni conto con transazioni dettagliate",
+  "metadata": "Metadati",
+  "summary": "Riassunto",
+  "accountInformation": "Informazioni Conto",
+  "runningBalance": "Saldo Corrente",
+  "finalBalance": "Saldo Finale",
+  "totalTransactions": "Totale Transazioni",
+  "totalAmount": "Importo Totale",
+  "lastTransaction": "Ultima Transazione",
+  "createdDate": "Data di Creazione",
+  "importFromExcel": "Importa da Excel",
+  "importData": "Importa Dati",
+  "selectExcelFile": "Per favore seleziona un file Excel da cui importare i dati",
+  "importValidationFailed": "Validazione Importazione Fallita",
+  "importPreviewSummary": "L'importazione aggiungerà {{accounts}} conti con {{transactions}} transazioni usando {{currencies}} valute",
+  "importPreviewAccounts": "Conti da importare",
+  "andMoreAccounts": "e {{count}} conti in più",
+  "importPreviewDateRange": "Range di date delle transazioni",
+  "noTransactionsInRange": "Nessuna transazione",
+  "importWarning": "⚠️ Questo modificherà i tuoi dati esistenti",
+  "replaceData": "Sostituisci Tutti i Dati",
+  "mergeData": "Unisci con Esistenti",
+  "processingImport": "Elaborazione importazione...",
+  "importSuccess": "Importazione Riuscita",
+  "importSuccessMessage": "{{accounts}} conti e {{transactions}} transazioni importati con successo",
+  "importMergeSuccess": "Importazione completata: Aggiunti {{accounts}} conti e {{transactions}} transazioni. Saltati {{skippedAccounts}} conti duplicati e {{skippedTransactions}} transazioni duplicate.",
+  "duplicatesDetected": "Duplicati Rilevati",
+  "duplicateAccountsFound": "{{count}} conti duplicati trovati",
+  "duplicateTransactionsFound": "{{count}} transazioni duplicate trovate",
+  "importFailed": "Importazione fallita: {{error}}",
+  "importExecutionFailed": "Fallita l'elaborazione dei dati di importazione",
+  "noAccountsToImport": "Nessun conto valido trovato nel file Excel",
+  "invalidAccountName": "Il conto {{index}} ha un nome non valido",
+  "invalidAccountCurrency": "Il conto {{index}} ha una valuta non valida",
+  "emptyTransactionName": "La transazione {{index}} ha un nome vuoto",
+  "invalidTransactionAmount": "La transazione {{index}} ha un importo non valido",
+  "invalidTransactionType": "La transazione {{index}} ha un tipo non valido"
 }
