--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -123,36 +123,63 @@
   "reset": "リセット",
   "settingsSaveFailed": "設定の保存に失敗しました",
   "totalBalance": "総残高",
-  "exportToExcel": "Export to Excel",
-  "exportData": "Export Data",
-  "preparingExport": "Preparing export...",
-  "noData": "No Data",
-  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
-  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
-  "export": "Export",
-  "exportSuccess": "Data exported successfully!",
-  "exportFailed": "Export failed. Please try again.",
-  "exportPreparationFailed": "Failed to prepare export data.",
-  "exportMetadata": "Export Information",
-  "appName": "App Name",
-  "exportDate": "Export Date",
-  "exportDescription": "Export Description",
-  "exportContent": "Export Content",
-  "exportContentDescription": "This file contains all your account and transaction data",
-  "dataPrivacy": "Data Privacy",
-  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
-  "sheetStructure": "Sheet Structure",
-  "summarySheet": "Summary Sheet",
-  "summarySheetDescription": "Overview of all accounts and their statistics",
-  "accountSheets": "Account Sheets",
-  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
-  "metadata": "Metadata",
-  "summary": "Summary",
-  "accountInformation": "Account Information",
-  "runningBalance": "Running Balance",
-  "finalBalance": "Final Balance",
-  "totalTransactions": "Total Transactions",
-  "totalAmount": "Total Amount",
-  "lastTransaction": "Last Transaction",
-  "createdDate": "Created Date"
+  "exportToExcel": "Excelにエクスポート",
+  "exportData": "データエクスポート",
+  "preparingExport": "エクスポートを準備中...",
+  "noData": "データなし",
+  "noDataToExport": "エクスポートできるデータがありません。まずアカウントと取引を追加してください。",
+  "exportConfirmation": "{{accounts}}個のアカウントと{{transactions}}件の取引を通貨{{currencies}}でエクスポートしますか？",
+  "export": "エクスポート",
+  "exportSuccess": "データが正常にエクスポートされました！",
+  "exportFailed": "エクスポートに失敗しました。もう一度お試しください。",
+  "exportPreparationFailed": "エクスポートデータの準備に失敗しました。",
+  "exportMetadata": "エクスポート情報",
+  "appName": "アプリ名",
+  "exportDate": "エクスポート日",
+  "exportDescription": "エクスポートの説明",
+  "exportContent": "エクスポート内容",
+  "exportContentDescription": "このファイルには、すべてのアカウントと取引データが含まれています",
+  "dataPrivacy": "データプライバシー",
+  "dataPrivacyNote": "すべてのデータはローカルでエクスポートされます。外部サーバーには何も送信されません。",
+  "sheetStructure": "シート構造",
+  "summarySheet": "サマリーシート",
+  "summarySheetDescription": "すべてのアカウントとその統計の概要",
+  "accountSheets": "アカウントシート",
+  "accountSheetsDescription": "各アカウントの詳細な取引を含む個別シート",
+  "metadata": "メタデータ",
+  "summary": "サマリー",
+  "accountInformation": "アカウント情報",
+  "runningBalance": "現在残高",
+  "finalBalance": "最終残高",
+  "totalTransactions": "総取引数",
+  "totalAmount": "総額",
+  "lastTransaction": "最後の取引",
+  "createdDate": "作成日",
+  "importFromExcel": "Excelからインポート",
+  "importData": "データインポート",
+  "selectExcelFile": "データをインポートするExcelファイルを選択してください",
+  "importValidationFailed": "インポート検証に失敗",
+  "importPreviewSummary": "インポートにより{{accounts}}個のアカウントと{{transactions}}件の取引が{{currencies}}通貨で追加されます",
+  "importPreviewAccounts": "インポートするアカウント",
+  "andMoreAccounts": "他{{count}}個のアカウント",
+  "importPreviewDateRange": "取引日付範囲",
+  "noTransactionsInRange": "取引なし",
+  "importWarning": "⚠️ これにより既存のデータが変更されます",
+  "replaceData": "すべてのデータを置換",
+  "mergeData": "既存と統合",
+  "processingImport": "インポートを処理中...",
+  "importSuccess": "インポート成功",
+  "importSuccessMessage": "{{accounts}}個のアカウントと{{transactions}}件の取引が正常にインポートされました",
+  "importMergeSuccess": "インポート完了：{{accounts}}個のアカウントと{{transactions}}件の取引を追加。{{skippedAccounts}}個の重複アカウントと{{skippedTransactions}}件の重複取引をスキップしました。",
+  "duplicatesDetected": "重複を検出",
+  "duplicateAccountsFound": "{{count}}個の重複アカウントが見つかりました",
+  "duplicateTransactionsFound": "{{count}}件の重複取引が見つかりました",
+  "importFailed": "インポートに失敗：{{error}}",
+  "importExecutionFailed": "インポートデータの処理に失敗",
+  "noAccountsToImport": "Excelファイルに有効なアカウントが見つかりません",
+  "invalidAccountName": "アカウント{{index}}の名前が無効です",
+  "invalidAccountCurrency": "アカウント{{index}}の通貨が無効です",
+  "emptyTransactionName": "取引{{index}}の名前が空です",
+  "invalidTransactionAmount": "取引{{index}}の金額が無効です",
+  "invalidTransactionType": "取引{{index}}のタイプが無効です"
 }
