--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -123,36 +123,63 @@
   "reset": "Redefinir",
   "settingsSaveFailed": "Falha ao salvar configurações",
   "totalBalance": "Saldo total",
-  "exportToExcel": "Export to Excel",
-  "exportData": "Export Data",
-  "preparingExport": "Preparing export...",
-  "noData": "No Data",
-  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
-  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
-  "export": "Export",
-  "exportSuccess": "Data exported successfully!",
-  "exportFailed": "Export failed. Please try again.",
-  "exportPreparationFailed": "Failed to prepare export data.",
-  "exportMetadata": "Export Information",
-  "appName": "App Name",
-  "exportDate": "Export Date",
-  "exportDescription": "Export Description",
-  "exportContent": "Export Content",
-  "exportContentDescription": "This file contains all your account and transaction data",
-  "dataPrivacy": "Data Privacy",
-  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
-  "sheetStructure": "Sheet Structure",
-  "summarySheet": "Summary Sheet",
-  "summarySheetDescription": "Overview of all accounts and their statistics",
-  "accountSheets": "Account Sheets",
-  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
-  "metadata": "Metadata",
-  "summary": "Summary",
-  "accountInformation": "Account Information",
-  "runningBalance": "Running Balance",
-  "finalBalance": "Final Balance",
-  "totalTransactions": "Total Transactions",
-  "totalAmount": "Total Amount",
-  "lastTransaction": "Last Transaction",
-  "createdDate": "Created Date"
+  "exportToExcel": "Exportar para Excel",
+  "exportData": "Exportar Dados",
+  "preparingExport": "Preparando exportação...",
+  "noData": "Sem Dados",
+  "noDataToExport": "Nenhum dado disponível para exportar. Por favor adicione algumas contas e transações primeiro.",
+  "exportConfirmation": "Exportar {{accounts}} contas com {{transactions}} transações usando moedas: {{currencies}}?",
+  "export": "Exportar",
+  "exportSuccess": "Dados exportados com sucesso!",
+  "exportFailed": "Falha na exportação. Tente novamente.",
+  "exportPreparationFailed": "Falha ao preparar dados de exportação.",
+  "exportMetadata": "Informações de Exportação",
+  "appName": "Nome do App",
+  "exportDate": "Data de Exportação",
+  "exportDescription": "Descrição da Exportação",
+  "exportContent": "Conteúdo da Exportação",
+  "exportContentDescription": "Este arquivo contém todos os dados das suas contas e transações",
+  "dataPrivacy": "Privacidade dos Dados",
+  "dataPrivacyNote": "Todos os dados são exportados localmente. Nada é enviado para servidores externos.",
+  "sheetStructure": "Estrutura das Planilhas",
+  "summarySheet": "Planilha de Resumo",
+  "summarySheetDescription": "Visão geral de todas as contas e suas estatísticas",
+  "accountSheets": "Planilhas de Contas",
+  "accountSheetsDescription": "Planilhas individuais para cada conta com transações detalhadas",
+  "metadata": "Metadados",
+  "summary": "Resumo",
+  "accountInformation": "Informações da Conta",
+  "runningBalance": "Saldo Corrente",
+  "finalBalance": "Saldo Final",
+  "totalTransactions": "Total de Transações",
+  "totalAmount": "Quantia Total",
+  "lastTransaction": "Última Transação",
+  "createdDate": "Data de Criação",
+  "importFromExcel": "Importar do Excel",
+  "importData": "Importar Dados",
+  "selectExcelFile": "Por favor selecione um arquivo Excel para importar dados",
+  "importValidationFailed": "Falha na Validação da Importação",
+  "importPreviewSummary": "A importação adicionará {{accounts}} contas com {{transactions}} transações usando {{currencies}} moedas",
+  "importPreviewAccounts": "Contas para importar",
+  "andMoreAccounts": "e {{count}} contas a mais",
+  "importPreviewDateRange": "Intervalo de datas das transações",
+  "noTransactionsInRange": "Sem transações",
+  "importWarning": "⚠️ Isso modificará seus dados existentes",
+  "replaceData": "Substituir Todos os Dados",
+  "mergeData": "Mesclar com Existentes",
+  "processingImport": "Processando importação...",
+  "importSuccess": "Importação Bem-sucedida",
+  "importSuccessMessage": "{{accounts}} contas e {{transactions}} transações importadas com sucesso",
+  "importMergeSuccess": "Importação concluída: Adicionadas {{accounts}} contas e {{transactions}} transações. Puladas {{skippedAccounts}} contas duplicadas e {{skippedTransactions}} transações duplicadas.",
+  "duplicatesDetected": "Duplicatas Detectadas",
+  "duplicateAccountsFound": "{{count}} contas duplicadas encontradas",
+  "duplicateTransactionsFound": "{{count}} transações duplicadas encontradas",
+  "importFailed": "Falha na importação: {{error}}",
+  "importExecutionFailed": "Falha ao processar dados de importação",
+  "noAccountsToImport": "Nenhuma conta válida encontrada no arquivo Excel",
+  "invalidAccountName": "A conta {{index}} tem nome inválido",
+  "invalidAccountCurrency": "A conta {{index}} tem moeda inválida",
+  "emptyTransactionName": "A transação {{index}} tem nome vazio",
+  "invalidTransactionAmount": "A transação {{index}} tem quantia inválida",
+  "invalidTransactionType": "A transação {{index}} tem tipo inválido"
 }
