--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -123,36 +123,63 @@
   "reset": "Сбросить",
   "settingsSaveFailed": "Не удалось сохранить настройки",
   "totalBalance": "Общий баланс",
-  "exportToExcel": "Export to Excel",
-  "exportData": "Export Data",
-  "preparingExport": "Preparing export...",
-  "noData": "No Data",
-  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
-  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
-  "export": "Export",
-  "exportSuccess": "Data exported successfully!",
-  "exportFailed": "Export failed. Please try again.",
-  "exportPreparationFailed": "Failed to prepare export data.",
-  "exportMetadata": "Export Information",
-  "appName": "App Name",
-  "exportDate": "Export Date",
-  "exportDescription": "Export Description",
-  "exportContent": "Export Content",
-  "exportContentDescription": "This file contains all your account and transaction data",
-  "dataPrivacy": "Data Privacy",
-  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
-  "sheetStructure": "Sheet Structure",
-  "summarySheet": "Summary Sheet",
-  "summarySheetDescription": "Overview of all accounts and their statistics",
-  "accountSheets": "Account Sheets",
-  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
-  "metadata": "Metadata",
-  "summary": "Summary",
-  "accountInformation": "Account Information",
-  "runningBalance": "Running Balance",
-  "finalBalance": "Final Balance",
-  "totalTransactions": "Total Transactions",
-  "totalAmount": "Total Amount",
-  "lastTransaction": "Last Transaction",
-  "createdDate": "Created Date"
+  "exportToExcel": "Экспорт в Excel",
+  "exportData": "Экспорт данных",
+  "preparingExport": "Подготовка экспорта...",
+  "noData": "Нет данных",
+  "noDataToExport": "Нет данных для экспорта. Пожалуйста, сначала добавьте счета и транзакции.",
+  "exportConfirmation": "Экспортировать {{accounts}} счетов с {{transactions}} транзакциями, используя валюты: {{currencies}}?",
+  "export": "Экспорт",
+  "exportSuccess": "Данные успешно экспортированы!",
+  "exportFailed": "Ошибка экспорта. Попробуйте снова.",
+  "exportPreparationFailed": "Не удалось подготовить данные для экспорта.",
+  "exportMetadata": "Информация об экспорте",
+  "appName": "Название приложения",
+  "exportDate": "Дата экспорта",
+  "exportDescription": "Описание экспорта",
+  "exportContent": "Содержимое экспорта",
+  "exportContentDescription": "Этот файл содержит все данные ваших счетов и транзакций",
+  "dataPrivacy": "Конфиденциальность данных",
+  "dataPrivacyNote": "Все данные экспортируются локально. Ничего не отправляется на внешние серверы.",
+  "sheetStructure": "Структура листов",
+  "summarySheet": "Сводный лист",
+  "summarySheetDescription": "Обзор всех счетов и их статистики",
+  "accountSheets": "Листы счетов",
+  "accountSheetsDescription": "Отдельные листы для каждого счета с подробными транзакциями",
+  "metadata": "Метаданные",
+  "summary": "Сводка",
+  "accountInformation": "Информация о счете",
+  "runningBalance": "Текущий баланс",
+  "finalBalance": "Итоговый баланс",
+  "totalTransactions": "Всего транзакций",
+  "totalAmount": "Общая сумма",
+  "lastTransaction": "Последняя транзакция",
+  "createdDate": "Дата создания",
+  "importFromExcel": "Импорт из Excel",
+  "importData": "Импорт данных",
+  "selectExcelFile": "Пожалуйста, выберите файл Excel для импорта данных",
+  "importValidationFailed": "Ошибка валидации импорта",
+  "importPreviewSummary": "Импорт добавит {{accounts}} счетов с {{transactions}} транзакциями, используя {{currencies}} валют",
+  "importPreviewAccounts": "Счета для импорта",
+  "andMoreAccounts": "и ещё {{count}} счетов",
+  "importPreviewDateRange": "Диапазон дат транзакций",
+  "noTransactionsInRange": "Нет транзакций",
+  "importWarning": "⚠️ Это изменит ваши существующие данные",
+  "replaceData": "Заменить все данные",
+  "mergeData": "Объединить с существующими",
+  "processingImport": "Обработка импорта...",
+  "importSuccess": "Импорт успешен",
+  "importSuccessMessage": "Успешно импортировано {{accounts}} счетов и {{transactions}} транзакций",
+  "importMergeSuccess": "Импорт завершён: добавлено {{accounts}} счетов и {{transactions}} транзакций. Пропущено {{skippedAccounts}} дублированных счетов и {{skippedTransactions}} дублированных транзакций.",
+  "duplicatesDetected": "Обнаружены дубликаты",
+  "duplicateAccountsFound": "Найдено {{count}} дублированных счетов",
+  "duplicateTransactionsFound": "Найдено {{count}} дублированных транзакций",
+  "importFailed": "Ошибка импорта: {{error}}",
+  "importExecutionFailed": "Не удалось обработать данные импорта",
+  "noAccountsToImport": "В файле Excel не найдено допустимых счетов",
+  "invalidAccountName": "Счёт {{index}} имеет недопустимое имя",
+  "invalidAccountCurrency": "Счёт {{index}} имеет недопустимую валюту",
+  "emptyTransactionName": "Транзакция {{index}} имеет пустое имя",
+  "invalidTransactionAmount": "Транзакция {{index}} имеет недопустимую сумму",
+  "invalidTransactionType": "Транзакция {{index}} имеет недопустимый тип"
 }
