--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -123,36 +123,63 @@
   "reset": "重置",
   "settingsSaveFailed": "保存设置失败",
   "totalBalance": "总余额",
-  "exportToExcel": "Export to Excel",
-  "exportData": "Export Data",
-  "preparingExport": "Preparing export...",
-  "noData": "No Data",
-  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
-  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
-  "export": "Export",
-  "exportSuccess": "Data exported successfully!",
-  "exportFailed": "Export failed. Please try again.",
-  "exportPreparationFailed": "Failed to prepare export data.",
-  "exportMetadata": "Export Information",
-  "appName": "App Name",
-  "exportDate": "Export Date",
-  "exportDescription": "Export Description",
-  "exportContent": "Export Content",
-  "exportContentDescription": "This file contains all your account and transaction data",
-  "dataPrivacy": "Data Privacy",
-  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
-  "sheetStructure": "Sheet Structure",
-  "summarySheet": "Summary Sheet",
-  "summarySheetDescription": "Overview of all accounts and their statistics",
-  "accountSheets": "Account Sheets",
-  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
-  "metadata": "Metadata",
-  "summary": "Summary",
-  "accountInformation": "Account Information",
-  "runningBalance": "Running Balance",
-  "finalBalance": "Final Balance",
-  "totalTransactions": "Total Transactions",
-  "totalAmount": "Total Amount",
-  "lastTransaction": "Last Transaction",
-  "createdDate": "Created Date"
+  "exportToExcel": "导出到Excel",
+  "exportData": "导出数据",
+  "preparingExport": "正在准备导出...",
+  "noData": "无数据",
+  "noDataToExport": "没有可导出的数据。请先添加一些账户和交易。",
+  "exportConfirmation": "导出{{accounts}}个账户和{{transactions}}笔交易，使用货币：{{currencies}}？",
+  "export": "导出",
+  "exportSuccess": "数据导出成功！",
+  "exportFailed": "导出失败。请重试。",
+  "exportPreparationFailed": "准备导出数据失败。",
+  "exportMetadata": "导出信息",
+  "appName": "应用名称",
+  "exportDate": "导出日期",
+  "exportDescription": "导出描述",
+  "exportContent": "导出内容",
+  "exportContentDescription": "此文件包含您的所有账户和交易数据",
+  "dataPrivacy": "数据隐私",
+  "dataPrivacyNote": "所有数据都在本地导出。不会发送任何数据到外部服务器。",
+  "sheetStructure": "工作表结构",
+  "summarySheet": "汇总表",
+  "summarySheetDescription": "所有账户及其统计数据概览",
+  "accountSheets": "账户表",
+  "accountSheetsDescription": "每个账户的单独工作表，包含详细交易",
+  "metadata": "元数据",
+  "summary": "汇总",
+  "accountInformation": "账户信息",
+  "runningBalance": "运行余额",
+  "finalBalance": "最终余额",
+  "totalTransactions": "总交易数",
+  "totalAmount": "总金额",
+  "lastTransaction": "最后交易",
+  "createdDate": "创建日期",
+  "importFromExcel": "从Excel导入",
+  "importData": "导入数据",
+  "selectExcelFile": "请选择要导入数据的Excel文件",
+  "importValidationFailed": "导入验证失败",
+  "importPreviewSummary": "导入将添加{{accounts}}个账户和{{transactions}}笔交易，使用{{currencies}}种货币",
+  "importPreviewAccounts": "要导入的账户",
+  "andMoreAccounts": "还有{{count}}个账户",
+  "importPreviewDateRange": "交易日期范围",
+  "noTransactionsInRange": "无交易",
+  "importWarning": "⚠️ 这将修改您的现有数据",
+  "replaceData": "替换所有数据",
+  "mergeData": "与现有数据合并",
+  "processingImport": "正在处理导入...",
+  "importSuccess": "导入成功",
+  "importSuccessMessage": "成功导入{{accounts}}个账户和{{transactions}}笔交易",
+  "importMergeSuccess": "导入完成：添加了{{accounts}}个账户和{{transactions}}笔交易。跳过了{{skippedAccounts}}个重复账户和{{skippedTransactions}}笔重复交易。",
+  "duplicatesDetected": "检测到重复项",
+  "duplicateAccountsFound": "发现{{count}}个重复账户",
+  "duplicateTransactionsFound": "发现{{count}}笔重复交易",
+  "importFailed": "导入失败：{{error}}",
+  "importExecutionFailed": "处理导入数据失败",
+  "noAccountsToImport": "Excel文件中未找到有效账户",
+  "invalidAccountName": "账户{{index}}的名称无效",
+  "invalidAccountCurrency": "账户{{index}}的货币无效",
+  "emptyTransactionName": "交易{{index}}的名称为空",
+  "invalidTransactionAmount": "交易{{index}}的金额无效",
+  "invalidTransactionType": "交易{{index}}的类型无效"
 }
