--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -123,36 +123,63 @@
   "reset": "초기화",
   "settingsSaveFailed": "설정 저장에 실패했습니다",
   "totalBalance": "총 잔액",
-  "exportToExcel": "Export to Excel",
-  "exportData": "Export Data",
-  "preparingExport": "Preparing export...",
-  "noData": "No Data",
-  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
-  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
-  "export": "Export",
-  "exportSuccess": "Data exported successfully!",
-  "exportFailed": "Export failed. Please try again.",
-  "exportPreparationFailed": "Failed to prepare export data.",
-  "exportMetadata": "Export Information",
-  "appName": "App Name",
-  "exportDate": "Export Date",
-  "exportDescription": "Export Description",
-  "exportContent": "Export Content",
-  "exportContentDescription": "This file contains all your account and transaction data",
-  "dataPrivacy": "Data Privacy",
-  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
-  "sheetStructure": "Sheet Structure",
-  "summarySheet": "Summary Sheet",
-  "summarySheetDescription": "Overview of all accounts and their statistics",
-  "accountSheets": "Account Sheets",
-  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
-  "metadata": "Metadata",
-  "summary": "Summary",
-  "accountInformation": "Account Information",
-  "runningBalance": "Running Balance",
-  "finalBalance": "Final Balance",
-  "totalTransactions": "Total Transactions",
-  "totalAmount": "Total Amount",
-  "lastTransaction": "Last Transaction",
-  "createdDate": "Created Date"
+  "exportToExcel": "Excel로 내보내기",
+  "exportData": "데이터 내보내기",
+  "preparingExport": "내보내기 준비 중...",
+  "noData": "데이터 없음",
+  "noDataToExport": "내보낼 데이터가 없습니다. 먼저 계정과 거래를 추가하세요.",
+  "exportConfirmation": "통화 {{currencies}}를 사용하여 {{accounts}}개 계정과 {{transactions}}건의 거래를 내보내시겠습니까?",
+  "export": "내보내기",
+  "exportSuccess": "데이터가 성공적으로 내보내졌습니다!",
+  "exportFailed": "내보내기에 실패했습니다. 다시 시도하세요.",
+  "exportPreparationFailed": "내보내기 데이터 준비에 실패했습니다.",
+  "exportMetadata": "내보내기 정보",
+  "appName": "앱 이름",
+  "exportDate": "내보내기 날짜",
+  "exportDescription": "내보내기 설명",
+  "exportContent": "내보내기 내용",
+  "exportContentDescription": "이 파일에는 모든 계정 및 거래 데이터가 포함되어 있습니다",
+  "dataPrivacy": "데이터 개인정보보호",
+  "dataPrivacyNote": "모든 데이터는 로컬에서 내보내집니다. 외부 서버로 전송되지 않습니다.",
+  "sheetStructure": "시트 구조",
+  "summarySheet": "요약 시트",
+  "summarySheetDescription": "모든 계정과 통계 개요",
+  "accountSheets": "계정 시트",
+  "accountSheetsDescription": "각 계정별 상세 거래가 포함된 개별 시트",
+  "metadata": "메타데이터",
+  "summary": "요약",
+  "accountInformation": "계정 정보",
+  "runningBalance": "진행 잔액",
+  "finalBalance": "최종 잔액",
+  "totalTransactions": "총 거래 수",
+  "totalAmount": "총 금액",
+  "lastTransaction": "마지막 거래",
+  "createdDate": "생성일",
+  "importFromExcel": "Excel에서 가져오기",
+  "importData": "데이터 가져오기",
+  "selectExcelFile": "데이터를 가져올 Excel 파일을 선택하세요",
+  "importValidationFailed": "가져오기 검증 실패",
+  "importPreviewSummary": "가져오기는 {{currencies}}개 통화를 사용하여 {{accounts}}개 계정과 {{transactions}}건의 거래를 추가합니다",
+  "importPreviewAccounts": "가져올 계정",
+  "andMoreAccounts": "그리고 {{count}}개의 추가 계정",
+  "importPreviewDateRange": "거래 날짜 범위",
+  "noTransactionsInRange": "거래 없음",
+  "importWarning": "⚠️ 이것은 기존 데이터를 수정합니다",
+  "replaceData": "모든 데이터 교체",
+  "mergeData": "기존 데이터와 병합",
+  "processingImport": "가져오기 처리 중...",
+  "importSuccess": "가져오기 성공",
+  "importSuccessMessage": "{{accounts}}개 계정과 {{transactions}}건의 거래를 성공적으로 가져왔습니다",
+  "importMergeSuccess": "가져오기 완료: {{accounts}}개 계정과 {{transactions}}건의 거래를 추가했습니다. {{skippedAccounts}}개의 중복 계정과 {{skippedTransactions}}건의 중복 거래를 건너뛰었습니다.",
+  "duplicatesDetected": "중복 항목 감지",
+  "duplicateAccountsFound": "{{count}}개의 중복 계정을 찾았습니다",
+  "duplicateTransactionsFound": "{{count}}건의 중복 거래를 찾았습니다",
+  "importFailed": "가져오기 실패: {{error}}",
+  "importExecutionFailed": "가져오기 데이터 처리에 실패했습니다",
+  "noAccountsToImport": "Excel 파일에서 유효한 계정을 찾을 수 없습니다",
+  "invalidAccountName": "계정 {{index}}의 이름이 유효하지 않습니다",
+  "invalidAccountCurrency": "계정 {{index}}의 통화가 유효하지 않습니다",
+  "emptyTransactionName": "거래 {{index}}의 이름이 비어있습니다",
+  "invalidTransactionAmount": "거래 {{index}}의 금액이 유효하지 않습니다",
+  "invalidTransactionType": "거래 {{index}}의 유형이 유효하지 않습니다"
 }
